--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,15 +10,15 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
+          <td><%= link_to(@bookid.user) do %>
+            <%= image_tag @bookid.user.get_profile_image, size:"100x100" %><br>
+            <%= @bookid.user.name %>
             <% end %>
           </td>
-          <td><%= link_to @book.title, @book %></td>
-          <td><%= @book.body %></td>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <td><%= link_to @bookid.title, @bookid %></td>
+          <td><%= @bookid.body %></td>
+            <td><%= link_to 'Edit', edit_book_path(@bookid), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @bookid, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
         </tr>
       </table>
     </div>
